# webserver

./: .env  Cargo.toml  Dockerfile  README.md  people_data.json
project/analysis/: data.txt
project/biosensor/: data.txt
project/drone/: data.txt
project/electrowetting/: data.txt
project/energy_storage/: data.txt
project/exoskeleton/: data.txt
project/lithography/: data.txt
project/plasma_jet/: data.txt
src/: app.rs  appstate.rs  error.rs  main.rs  people.rs  styles.css  utils.rs
src/api/: mod.rs  person.rs
src/routes/: index.rs  mod.rs  people.rs  project.rs
static/: styles.css
static/profile_pictures/: marion_fowler.heic
templates/: base.html  hello.html  index.html  nav.html  people.html
templates/project/: analytics.html  biosensor.html  drone.html  electrowetting.html  energy_storage.html  exoskeleton.html  lithography.html  plasma_jet.html  project.html
