[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = { version = "1.5.0", features = ["server"] }
hyper-util = { version = "0.1.9", features = ["server"] }
log = "0.4.22"
notify = "6.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace", "fs"] }
tower-service = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dev]
opt-level = 0
